--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -118,4 +118,4 @@ volumes:
 networks:
   traefik-public:
     # Allow setting it to false for testing
-    external: traefik-public
+    external: true
