--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,39 +2,36 @@ default_language_version:
   python: python3.12
 
 repos:
+  # general checks (see here: https://pre-commit.com/hooks.html
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
     hooks:
-      - id: check-added-large-files
-      - id: check-toml
       - id: check-yaml
         args: [--allow-multiple-documents]
       - id: end-of-file-fixer
       - id: trailing-whitespace
 
+  # black - formatting
   - repo: https://github.com/psf/black
-    rev: 24.8.0
+    rev: 25.1.0
     hooks:
       - id: black
         name: black
-        args:
-          - "--config"
-          - "./backend/pyproject.toml"
+        args: [--config=./backend/pyproject.toml]
 
+  # ruff - linting
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.6.9
+    rev: "v0.11.10"
     hooks:
-      # Run the linter.
       - id: ruff
-      # Run the formatter.
-      - id: ruff-format
+        name: ruff
+        args: [--config=./backend/pyproject.toml]
 
+  # mypy - lint-like type checking
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.11.2
+    rev: v1.15.0
     hooks:
       - id: mypy
         name: mypy
-        args:
-          - "--config"
-          - "./backend/pyproject.toml"
-          - "--ignore-missing-imports"
+        additional_dependencies: [types-requests==2.32.0.20250515]
+        args: [--config-file=./backend/pyproject.toml, --ignore-missing-imports]
