--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,48 +1,52 @@
-[tool.poetry]
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["app"]
+
+[project]
 name = "farm-docker"
-version = "1.2.0"
+version = "1.3.0"
 description = "Backend API for farm-docker"
-authors = ["Jonas Renault <jonasrenault@gmail.com>"]
 readme = "README.md"
-homepage = "https://github.com/jonasrenault/fastapi-react-mongodb-docker#readme"
-repository = "https://github.com/jonasrenault/fastapi-react-mongodb-docker"
-packages = [
-    { include = "app" },
+license = { text = "MIT" }
+authors = [
+    {name = "Jonas Renault", email = "jonasrenault@gmail.com"},
+]
+requires-python = ">=3.12"
+dependencies = [
+    "requests>=2.32.3",
+    "pymongo>=4.13.0",
+    "fastapi[standard]>=0.115.12",
+    "python-multipart>=0.0.20",
+    "motor>=3.7.1",
+    "pydantic>=2.11.4",
+    "email-validator>=2.2.0",
+    "python-jose>=3.4.0",
+    "passlib>=1.7.4",
+    "bcrypt>=4.3.0",
+    "beanie>=1.29.0",
+    "python-dotenv>=1.1.0",
+    "fastapi-sso>=0.18.0",
+    "pydantic-settings>=2.9.1",
 ]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-requests = "^2.32.3"
-pymongo = "^4.9.2"
-fastapi = {extras = ["standard"], version = "^0.115.0"}
-python-multipart = "^0.0.12"
-motor = "^3.6.0"
-pydantic = "^2.9.2"
-email-validator = "^2.2.0"
-python-jose = "^3.3.0"
-passlib = "^1.7.4"
-bcrypt = "4.0.1"
-beanie = "^1.26.0"
-python-dotenv = "^1.0.1"
-fastapi-sso = "^0.15.0"
-pydantic-settings = "^2.5.2"
+[project.urls]
+"Homepage" = "https://github.com/jonasrenault/fastapi-react-mongodb-docker#readme"
+"Repository" = "https://github.com/jonasrenault/fastapi-react-mongodb-docker"
 
-[tool.poetry.group.dev]
-optional = true
-
-[tool.poetry.group.dev.dependencies]
-black = "^24.8.0"
-pre-commit = "^4.0.0"
-httpx = "^0.27.2"
-asgi-lifespan = "^2.1.0"
-pytest = "^8.3.3"
-pytest-cov = "^5.0.0"
-ruff = "^0.6.9"
-mypy = "^1.11.2"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[dependency-groups]
+dev = [
+    "asgi-lifespan>=2.1.0",
+    "black>=25.1.0",
+    "httpx>=0.28.1",
+    "mypy>=1.15.0",
+    "pre-commit>=4.2.0",
+    "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
+    "ruff>=0.11.10",
+]
 
 [tool.black]
 line_length = 90
@@ -74,6 +78,9 @@ known-first-party = ["app"]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
+
+[tool.isort]
+known_first_party = ["app"]
 
 [tool.mypy]
 files = ["app", "tests"]
