--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,14 @@
-﻿altair==5.5.0
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
-bcrypt==3.2.2
-passlib==1.7.4
+bcrypt==4.1.2
 beanie==2.0.0
 blinker==1.9.0
 cachetools==5.5.2
+certifi==2025.10.5
 cffi==1.17.1
-charset-normalizer==3.4.2
+charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
 contourpy==1.3.3
@@ -19,7 +19,9 @@ ecdsa==0.19.1
 email-validator==2.3.0
 fastapi==0.115.12
 fastapi-sso==0.18.0
-fonttools==4.59.0
+filelock==3.20.0
+fonttools==4.60.1
+fsspec==2025.9.0
 geopandas==1.1.1
 git-filter-repo==2.47.0
 gitdb==4.0.12
@@ -30,27 +32,32 @@ h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
-idna==3.10
+idna==3.11
 imageio==2.37.0
 imageio-ffmpeg==0.6.0
 Jinja2==3.1.6
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
-kiwisolver==1.4.8
+kiwisolver==1.4.9
 lazy-model==0.3.0
-MarkupSafe==3.0.2
-matplotlib==3.10.5
+MarkupSafe==3.0.3
+matplotlib==3.10.7
 motor==3.7.1
+mpmath==1.3.0
 narwhals==2.5.0
 networkx==3.5
-numpy==2.3.2
+numpy==2.2.6
 oauthlib==3.3.1
+opencv-python==4.12.0.88
 osmnx==2.0.5
 packaging==25.0
 pandas==2.3.1
+passlib==1.7.4
 pillow==11.3.0
+polars==1.34.0
+polars-runtime-32==1.34.0
 protobuf==6.32.1
-psutil==7.0.0
+psutil==7.1.0
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -63,17 +70,20 @@ pygame==2.6.1
 PyJWT==2.10.1
 pymongo==4.14.1
 pyogrio==0.11.1
-pyparsing==3.2.3
+pyparsing==3.2.5
 pyproj==3.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-jose==3.5.0
+python-multipart==0.0.20
 pytz==2025.2
-PyYAML==6.0.2
+PyYAML==6.0.3
 referencing==0.36.2
-requests==2.32.4
+requests==2.32.5
 rpds-py==0.27.1
 rsa==4.9.1
+scipy==1.16.2
+setuptools==80.9.0
 shapely==2.1.1
 six==1.17.0
 smmap==5.0.2
@@ -81,33 +91,20 @@ sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
 streamlit==1.50.0
+sympy==1.14.0
 tenacity==9.1.2
 toml==0.10.2
+torch==2.8.0
+torchvision==0.23.0
 tornado==6.5.2
 tqdm==4.67.1
 typing-inspection==0.4.1
-typing_extensions==4.14.0
+typing_extensions==4.15.0
 tzdata==2025.2
+ultralytics==8.3.212
+ultralytics-thop==2.0.17
 urllib3==2.5.0
 uvicorn==0.34.3
 watchdog==6.0.0
 watchfiles==1.0.5
 websockets==15.0.1
-certifi==2025.8.3
-torch==2.3.1
-torchvision==0.18.1
-ultralytics==8.3.212
-
-
-
-
-
-
-
-
-
-
-
-
-
-
