--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,6 +30,12 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "fastapi-sso>=0.18.0",
     "pydantic-settings>=2.9.1",
+
+    "torch==2.8.0",
+    "torchvision==0.23.0",
+    "ultralytics==8.3.212",
+    "opencv-python==4.12.0.88",
+    "Pillow==11.3.0",
 ]
 
 [project.urls]
