--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
     "torch==2.8.0",
     "torchvision==0.23.0",
     "ultralytics==8.3.212",
-    "opencv-python==4.12.0.88",
+    "opencv-python-headless>=4.12.0.88",
     "Pillow==11.3.0",
 ]
 
