--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,11 @@
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+torch==2.8.0+cpu
+torchvision==0.23.0+cpu
+ultralytics==8.3.212
+opencv-python-headless==4.12.0.88
+Pillow==11.3.0
+
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
@@ -53,7 +61,6 @@ osmnx==2.0.5
 packaging==25.0
 pandas==2.3.1
 passlib==1.7.4
-pillow==11.3.0
 polars==1.34.0
 polars-runtime-32==1.34.0
 protobuf==6.32.1
@@ -94,15 +101,11 @@ streamlit==1.50.0
 sympy==1.14.0
 tenacity==9.1.2
 toml==0.10.2
-torch==2.8.0
-torchvision==0.23.0
 tornado==6.5.2
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
-ultralytics==8.3.212
-ultralytics-thop==2.0.17
 urllib3==2.5.0
 uvicorn==0.34.3
 watchdog==6.0.0
