--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -31,10 +31,10 @@ dependencies = [
     "fastapi-sso>=0.18.0",
     "pydantic-settings>=2.9.1",
 
-    "torch==2.8.0",
-    "torchvision==0.23.0",
+    "torch==2.8.0+cpu",
+    "torchvision==0.23.0+cpu",
     "ultralytics==8.3.212",
-    "opencv-python-headless>=4.12.0.88",
+    "opencv-python-headless==4.12.0.88",
     "Pillow==11.3.0",
 ]
 
