--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,8 @@
---extra-index-url https://download.pytorch.org/whl/cpu
-
-torch==2.8.0+cpu
-torchvision==0.23.0+cpu
+torch==2.8.0
+torchvision==0.23.0
 ultralytics==8.3.212
 opencv-python-headless==4.12.0.88
 Pillow==11.3.0
-
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
@@ -110,4 +107,5 @@ uvicorn==0.34.3
 watchdog==6.0.0
 watchfiles==1.0.5
 websockets==15.0.1
+
 
