--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,12 @@
-torch==2.8.0
-torchvision==0.23.0
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+torch==2.8.0+cpu
+torchvision==0.23.0+cpu
 ultralytics==8.3.212
 opencv-python-headless==4.12.0.88
 Pillow==11.3.0
+
+
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
