--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -31,8 +31,8 @@ dependencies = [
     "fastapi-sso>=0.18.0",
     "pydantic-settings>=2.9.1",
 
-    "torch==2.8.0+cpu",
-    "torchvision==0.23.0+cpu",
+    "torch==2.8.0",
+    "torchvision==0.23.0",
     "ultralytics==8.3.212",
     "opencv-python-headless==4.12.0.88",
     "Pillow==11.3.0",
