--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,4 @@
+google-generativeai==0.8.5
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
@@ -102,6 +103,7 @@ uvicorn==0.34.3
 watchdog==6.0.0
 watchfiles==1.0.5
 websockets==15.0.1
+
 
 
 
