--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,7 @@
 google-generativeai==0.8.5
-absl-py==2.3.1
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.9.0
-astunparse==1.6.3
 attrs==25.3.0
 bcrypt==4.1.2
 beanie==2.0.0
@@ -20,77 +18,38 @@ cycler==0.12.1
 dnspython==2.7.0
 ecdsa==0.19.1
 email-validator==2.3.0
-exceptiongroup==1.3.0
 fastapi==0.115.12
-fastapi-cli==0.0.13
-fastapi-cloud-cli==0.3.1
 fastapi-sso==0.18.0
 filelock==3.20.0
-flatbuffers==25.9.23
-fonttools==4.59.0
+fonttools==4.60.1
 fsspec==2025.9.0
-gast==0.6.0
 geopandas==1.1.1
 git-filter-repo==2.47.0
 gitdb==4.0.12
 GitPython==3.1.45
-google-ai-generativelanguage==0.6.15
-google-api-core==2.26.0
-google-api-python-client==2.184.0
 google-auth==2.40.3
-google-auth-httplib2==0.2.0
-google-generativeai==0.8.5
-google-pasta==0.2.0
-googleapis-common-protos==1.70.0
 greenlet==3.2.3
-grpcio==1.75.1
-grpcio-status==1.71.2
 h11==0.16.0
-h5py==3.14.0
 httpcore==1.0.9
-httplib2==0.31.0
 httptools==0.6.4
 httpx==0.28.1
-idna==3.10
+idna==3.11
 imageio==2.37.0
 imageio-ffmpeg==0.6.0
 Jinja2==3.1.6
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
-keras==3.11.3
-kiwisolver==1.4.8
+kiwisolver==1.4.9
 lazy-model==0.3.0
-libclang==18.1.1
-Markdown==3.9
-markdown-it-py==4.0.0
-MarkupSafe==3.0.2
-matplotlib==3.10.5
-mdurl==0.1.2
-ml_dtypes==0.5.3
+MarkupSafe==3.0.3
+matplotlib==3.10.7
 motor==3.7.1
 mpmath==1.3.0
-namex==0.1.0
 narwhals==2.5.0
-networkx==3.4.2
+networkx==3.5
 numpy==2.2.6
-nvidia-cublas-cu12==12.8.4.1
-nvidia-cuda-cupti-cu12==12.8.90
-nvidia-cuda-nvrtc-cu12==12.8.93
-nvidia-cuda-runtime-cu12==12.8.90
-nvidia-cudnn-cu12==9.10.2.21
-nvidia-cufft-cu12==11.3.3.83
-nvidia-cufile-cu12==1.13.1.3
-nvidia-curand-cu12==10.3.9.90
-nvidia-cusolver-cu12==11.7.3.90
-nvidia-cusparse-cu12==12.5.8.93
-nvidia-cusparselt-cu12==0.7.1
-nvidia-nccl-cu12==2.27.3
-nvidia-nvjitlink-cu12==12.8.93
-nvidia-nvtx-cu12==12.8.90
 oauthlib==3.3.1
 opencv-python==4.12.0.88
-opt_einsum==3.4.0
-optree==0.17.0
 osmnx==2.0.5
 packaging==25.0
 pandas==2.3.1
@@ -98,9 +57,8 @@ passlib==1.7.4
 pillow==11.3.0
 polars==1.34.0
 polars-runtime-32==1.34.0
-proto-plus==1.26.1
-protobuf==5.29.5
-psutil==7.0.0
+protobuf>=3.20.3,<6.0.0
+psutil==7.1.0
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
@@ -110,29 +68,24 @@ pydantic-settings==2.10.1
 pydantic_core==2.33.2
 pydeck==0.9.1
 pygame==2.6.1
-Pygments==2.19.2
 PyJWT==2.10.1
 pymongo==4.14.1
 pyogrio==0.11.1
-pyparsing==3.2.3
+pyparsing==3.2.5
 pyproj==3.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-jose==3.5.0
 python-multipart==0.0.20
 pytz==2025.2
-PyYAML==6.0.2
+PyYAML==6.0.3
 referencing==0.36.2
-requests==2.32.4
-rich==14.2.0
-rich-toolkit==0.15.1
-rignore==0.7.0
+requests==2.32.5
 rpds-py==0.27.1
 rsa==4.9.1
-scipy==1.15.3
-sentry-sdk==2.41.0
+scipy==1.16.2
+setuptools==80.9.0
 shapely==2.1.1
-shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
@@ -141,28 +94,18 @@ starlette==0.46.2
 streamlit==1.50.0
 sympy==1.14.0
 tenacity==9.1.2
-tensorboard==2.20.0
-tensorboard-data-server==0.7.2
-tensorflow==2.20.0
-termcolor==3.1.0
 toml==0.10.2
 torch==2.8.0
 torchvision==0.23.0
 tornado==6.5.2
 tqdm==4.67.1
-triton==3.4.0
-typer==0.19.2
 typing-inspection==0.4.1
-typing_extensions==4.14.0
+typing_extensions==4.15.0
 tzdata==2025.2
-uritemplate==4.2.0
 ultralytics==8.3.212
 ultralytics-thop==2.0.17
 urllib3==2.5.0
 uvicorn==0.34.3
-uvloop==0.21.0
 watchdog==6.0.0
 watchfiles==1.0.5
 websockets==15.0.1
-Werkzeug==3.1.3
-wrapt==1.17.3
