feat: Criação de testes unitários automaticos de todos os endpoints - Teste de avaliation - Teste de Company_auth - Teste de Company_map - Teste de Company - Teste de Discard - Teste de Location

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -91,4 +91,6 @@ disable_error_code = ["import-untyped"]
 filterwarnings = [
     "ignore::UserWarning",
     'ignore::DeprecationWarning',
+    "ignore:password cannot be longer than 72 bytes:UserWarning",
+    "ignore:trapped error reading bcrypt version:UserWarning",
 ]
